
add_executable (thread_monitor monitor.cpp)

add_executable (thread_starvephil starvephil.cpp)

add_executable (thread_tennis tennis.cpp)

add_executable (thread_condition condition.cpp)

add_executable (thread_mutex mutex.cpp)

add_executable (thread_once once.cpp)

add_executable (recursive_mutex recursive_mutex.cpp)

add_executable (thread_instance thread.cpp)

add_executable (thread_group thread_group.cpp)

add_executable (thread_tss tss.cpp)

add_executable (thread_xtime xtime.cpp)
